--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "kanchil",
   "license": "MIT",
   "scripts": {
-    "dev": "vuepress dev .",
-    "build": "vuepress build ."
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs"
   },
   "devDependencies": {
     "vuepress": "^1.5.2"
